--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title th:text="${title}">Welcome to Ha Noi Trip</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" th:href="@{css/style.css}" type="text/css">
 </head>
 <body>
 <header>
